--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -11,7 +11,7 @@
         <title>Página Inicial</title>
         <h:outputStylesheet name="view.css" library="css" />
     </h:head>
-    <h:body style="font-size: 10px; " >
+    <h:body style="font-size: 10px; background-image: url(tecnologia1.jpg); color: #ffffff; " >
         <h:form id="inicio">
             <p:button outcome="Início" value="Início" icon="ui-icon-star" href="index.xhtml" disabled="true">  
                 <f:param name="Início" value="80" />  
