--- a/web/agenda.xhtml
+++ b/web/agenda.xhtml
@@ -8,7 +8,7 @@
     <h:head>
         <title> Você clicou em um botão </title>
     </h:head>
-    <h:body style="font-size: 10px; background-image: url(tecnologia1.jpg);" >
+    <h:body style="font-size: 10px;" >
         <p:button outcome="Início" value="Início" icon="ui-icon-star" href="index.xhtml">  
             <f:param name="Início" value="80" />  
         </p:button> 
@@ -56,6 +56,7 @@
  
             </p:dataTable>
             <p:commandButton value="Adicionar" action="#{Agenda.Adicionar}" update="agenda" />
+            <p:commandButton value="Salvar" action="#{Agenda.salvar()}" />
         </h:form>
     </h:body>
 </html>
