--- a/web/registro.xhtml
+++ b/web/registro.xhtml
@@ -14,7 +14,7 @@ and open the template in the editor.
         <title>Registro</title>
         <h:outputStylesheet name="view.css" library="css" />
     </h:head>
-    <body style="font-size: 10px; background-image: url(tecnologia1.jpg); color: #ffffff; " >
+    <body style="font-size: 10px; " >
         <p:button outcome="Início" value="Início" icon="ui-icon-star" href="index.xhtml">  
             <f:param name="Início" value="80" />  
         </p:button> 
