--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -35,7 +35,7 @@
             <br/>
             <br/>
             <br/>
-            <h:outputText value="Para acessar o site é necessário se cadastrar, caso não tenha uma conta crie ela cçicando no botão abaixo:" /> <br />
+            <h:outputText value="Para acessar o site é necessário se cadastrar, caso não tenha uma conta crie ela clicando no botão abaixo:" /> <br />
               <p:button outcome="Registrar" value="Cadastrar" icon="ui-icon-star" href="registro.xhtml" disabled="false">
               <f:param name="Cadastro" value="80" />
               </p:button> 
